# scionlab

./: go.mod  go.sum  go_deps.bzl  scion.sh  virtual.sh
control/beaconing/: extender.go
control/fabrid/grpc/: fabrid_service.go  fabrid_service_test.go  fetcher.go  fetcher_test.go
daemon/internal/servers/: grpc.go  grpc_fabrid.go
demo/fabrid/: BUILD.bazel
pkg/daemon/: grpc.go
pkg/experimental/fabrid/crypto/: fabrid_crypto.go  fabrid_crypto_test.go
pkg/snet/: path.go
pkg/snet/path/: fabrid.go
private/app/path/: path.go
private/path/combinator/: fabrid_accumulator.go  graph.go
private/path/fabridquery/: query_test.go
private/topology/: BUILD.bazel  raw.go  topology.go  topology_raw.go  topology_test.go
private/topology/json/: BUILD.bazel  json.go  json_raw.go  json_test.go
private/underlay/raw/: BUILD.bazel  conn.go  msg_hdr.go  protocol.go
private/underlay/raw/protocols/: BUILD.bazel  defs.go  dot1q.go  ethernet.go  mpls.go  mplsipudp.go  utils.go
router/: BUILD.bazel  connector.go  connector_raw.go  dataplane.go  dataplane_fabrid.go  dataplane_internal_test.go  dataplane_raw.go  dataplane_test.go  export_test.go
router/cmd/router/: main.go
router/config/: BUILD.bazel  config.go  mpls_rib.go
router/control/: BUILD.bazel  conf.go  conf_raw.go  config_test.go  iactx.go
scion/cmd/scion/: fabrid.go  ping.go
tools/: supervisor.sh
tools/end2end/: BUILD.bazel  fabrid.go  main.go
tools/topology/: config.py  go.py
