load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dot1q.go",
        "mpls.go",
        "mplsipudp.go",
        "utils.go",
    ],
    importpath = "github.com/scionproto/scion/private/underlay/raw/protocols",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/private/serrors:go_default_library",
        "//private/underlay/raw:go_default_library",
        "@org_golang_x_net//ipv6:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
    ],
)
